--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -1,4 +1,4 @@
-@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/core/src/scss/global' as core;
 @use '@uq-uidf/foundation-global/src/scss/global' as *;
 @use '@uq-uidf/foundation-grid/src/scss/global' as *;
 @use 'global' as *;
@@ -17,7 +17,7 @@
     font-size: $alert-font-size-sm;
     font-weight: $alert-font-weight;
     line-height: 1.4;
-    padding: 1rem 5rem 1rem $column-gutter / 2;
+    padding: core.$space core.$space-uul core.$space $column-gutter / 2;
 
     a {
       color: $alert-text-color;
@@ -31,8 +31,8 @@
 
   &__action {
     @include grid-column($columns: ceil($total-columns / 2), $float: false);
-    padding-bottom: 1.1rem;
-    padding-top: .625rem;
+    padding-bottom: core.$space;
+    padding-top: core.$space-sm;
   }
 
   &__close {
@@ -42,7 +42,7 @@
     font-weight: 300;
     line-height: 0.9;
     opacity: 1;
-    padding: 0 6px 4px;
+    padding: core.$space-none core.$space-sm core.$space-xs;
     position: absolute;
     text-decoration: none !important;
     top: .55rem;
@@ -64,7 +64,7 @@
   &--has-action {
     .alert__message {
       // @include grid-column($columns: floor($total-columns / 2), $float: false);
-      padding-bottom: 0;
+      padding-bottom: core.$space-none;
     }
   }
 
@@ -106,12 +106,12 @@
 
     &__message {
       font-size: $alert-font-size-md;
-      padding: 1.2rem 8rem 1.25rem $column-gutter / 2;
+      padding: core.$space core.$space-uuuul core.$space $column-gutter / 2;
     }
 
     &__action {
-      padding-bottom: .625rem;
-      padding-right: 5rem;
+      padding-bottom: core.$space-sm;
+      padding-right: core.$space-uul;
       width: grid-calc(ceil($total-columns / 3), $total-columns);
     }
 
@@ -121,15 +121,15 @@
 
     &--has-action {
       .alert__message {
-        padding-bottom: 1.25rem;
+        padding-bottom: core.$space;
         padding-right: $column-gutter / 2;
         width: grid-calc(floor($total-columns - ($total-columns / 3)), $total-columns);
       }
     }
     &--slim {
       .alert__message {
-        padding-bottom: 1.0625rem;
-        padding-top: 1rem;
+        padding-bottom: core.$space;
+        padding-top: core.$space;
       }
       .alert__close {
         top: .7rem;
@@ -141,7 +141,7 @@
 @media #{$large-up} {
   .alert {
     &__message {
-      padding: 1.4rem 10.6875rem 1.5rem $column-gutter / 2;
+      padding: core.$space-md core.$space-uuuul core.$space-md $column-gutter / 2;
     }
 
     &__action {
@@ -155,7 +155,7 @@
 
     &--has-action {
       .alert__message {
-        padding-bottom: 1.5rem;
+        padding-bottom: core.$space-md;
         width: grid-calc(floor($total-columns - ($total-columns / 12 * 5)), $total-columns);
       }
     }
