--- a/packages/footer/src/scss/_global.scss
+++ b/packages/footer/src/scss/_global.scss
@@ -1,6 +1,6 @@
-@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/core/src/scss/global' as core;
 
 // Variables, functions, and mixins
-$site-footer-color: mix($uq-white, $uq-purple, 75%);
-$site-footer-link-color: $uq-white;
+$site-footer-color: mix(core.$uq-white, core.$uq-purple, 75%);
+$site-footer-link-color: core.$uq-white;
 $site-footer-font-size: .875rem;
