--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -1,7 +1,7 @@
 // Variables, functions, and mixins
-@use '@uq-uidf/core/src/scss/global' as *; 
+@use '@uq-uidf/core/src/scss/global' as core; 
 
 // Forms
-$form-required-color: $uq-red-dark20; //d6492a;
-$form-description-color: $uq-neutral-dark60; //666;
-$form-input-border-color: $uq-neutral-dark20; //ccc;
+$form-required-color: core.$uq-red-dark20; //d6492a;
+$form-description-color: core.$uq-neutral-dark60; //666;
+$form-input-border-color: core.$uq-neutral-dark20; //ccc;
