--- a/packages/tabs/src/scss/_global.scss
+++ b/packages/tabs/src/scss/_global.scss
@@ -1,7 +1,7 @@
 // Variables, functions, and mixins
-@use '@uq-uidf/core/src/scss/global' as *; 
+@use '@uq-uidf/core/src/scss/global' as core; 
 
-$panel-border: $uq-neutral-light60; //e1e1e1;
-$active-color: $uq-yellow; //ffa200;
-$app-wrapper: $uq-neutral-light20; //f8f8f9;
-$tabs-color: $uq-neutral-dark60; //51247a;
+$panel-border: core.$uq-neutral-light60; //e1e1e1;
+$active-color: core.$uq-yellow; //ffa200;
+$app-wrapper: core.$uq-neutral-light20; //f8f8f9;
+$tabs-color: core.$uq-neutral-dark60; //51247a;
