--- a/packages/alert/src/scss/_global.scss
+++ b/packages/alert/src/scss/_global.scss
@@ -1,6 +1,6 @@
-@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/core/src/scss/global' as core;
 
-$alert-default-bg-color: $uq-neutral-light40 !default; //EFEFEF !default;
+$alert-default-bg-color: core.$uq-neutral-light40 !default; //EFEFEF !default;
 $alert-info-bg-color: #D4F0FF !default;
 $alert-success-bg-color: #D5EECA !default;
 $alert-warning-bg-color: #FFE0AD !default;
@@ -11,5 +11,5 @@ $alert-font-size-md: 1rem !default;
 $alert-font-size-lg: 1rem !default;
 
 $alert-font-weight: 300 !default;
-$alert-text-color: $uq-neutral-dark80 !default; //222 !default;
-$alert-close-color: $uq-neutral-dark40 !default; //747474 !default;
+$alert-text-color: core.$uq-neutral-dark80 !default; //222 !default;
+$alert-close-color: core.$uq-neutral-dark40 !default; //747474 !default;
