--- a/packages/site-title-utility/src/scss/_global.scss
+++ b/packages/site-title-utility/src/scss/_global.scss
@@ -1,5 +1,5 @@
-@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/core/src/scss/global' as core;
 
-$site-title-font: $font-body !default;
-$site-title-color: $uq-purple !default;
-$site-title-border-color: #F3F3F3 !default;
+$site-title-font: core.$font-body !default;
+$site-title-color: core.$uq-purple !default;
+$site-title-border-color: core.$uq-neutral-light20 !default;
