--- a/packages/tabs/src/scss/_component.scss
+++ b/packages/tabs/src/scss/_component.scss
@@ -12,7 +12,7 @@
 // .tabs--three - Style for three tabs
 // .tabs--four - Style for four tabs
 // .tabs--five - Style for five tabs
-//s
+//
 // Variants for tabs content
 // .tabs-content--container - Rectangle box style for tab content
 
