--- a/packages/grid/src/scss/_component.scss
+++ b/packages/grid/src/scss/_component.scss
@@ -1,164 +1,35 @@
 @use "@uq-uidf/core/src/scss/global" as core;
 @use 'global' as *;
 
+/**
+ * Grid container
+ */
+
 @supports (display: grid) {
-  .grid {
-    display: grid;    
-  }
+  @include grid-row--css-native(12, core.$space, 'xl', 24);
+  @include grid-row--css-native(8, core.$space, 'md', 24);
+  @include grid-row--css-native(6, core.$space, null, 24) {
+    &:not(.uq-grid--full-width) {
+      @include layout-containment; // contain the first grid wrapper by default
+    }
+
+    &--full-width,
+    .uq-grid {
+      @include layout-full-width;
+    }
+  };
 }
 
-@media #{core.$screen-m-up} {
-  .grid {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -0.75rem;
-    margin-right: -0.75rem;
-  }
-
-  .grid__col {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-    position: relative;
-  }
-
-  .grid--12-col {
-    width: 100%;
-  }
-
-  .grid--11-col {
-    width: 91.6667%;
-  }
-
-  .grid--10-col {
-    width: 83.3333%;
-  }
-
-  .grid--9-col {
-    width: 75%;
-  }
-
-  .grid--8-col {
-    width: 66.6667%;
-  }
-
-  .grid--7-col {
-    width: 58.3333%;
-  }
-
-  .grid--6-col {
-    width: 50%;
-  }
-
-  .grid--5-col {
-    width: 41.6667%;
-  }
-
-  .grid--4-col {
-    width: 33.3333%;
-  }
-
-  .grid--3-col {
-    width: 25%;
-  }
-
-  .grid--2-col {
-    width: 16.6667%;
-  }
-
-  .grid--1-col {
-    width: 8.3333%;
-  }
-
+@media #{core.$screen-md-up} {
   @supports (display: grid) {
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-gap: core.$spacing-m;
-      grid-template-rows: 1fr;
-      margin-left: 0;
-      margin-right: 0;
-    }
-
-    .grid__col {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-    .grid--12-col {
-      grid-column: auto / span 12;
-      width: auto;
-    }
-
-    .grid--11-col {
-      grid-column: auto / span 11;
-      width: auto;
-    }
-
-    .grid--10-col {
-      grid-column: auto / span 10;
-      width: auto;
-    }
-
-    .grid--9-col {
-      grid-column: auto / span 9;
-      width: auto;
-    }
-
-    .grid--8-col {
-      grid-column: auto / span 8;
-      width: auto;
-    }
-
-    .grid--7-col {
-      grid-column: auto / span 7;
-      width: auto;
-    }
-
-    .grid--6-col {
-      grid-column: auto / span 6;
-      width: auto;
-    }
-
-    .grid--5-col {
-      grid-column: auto / span 5;
-      width: auto;
-    }
-
-    .grid--4-col {
-      grid-column: auto / span 4;
-      width: auto;
-    }
-
-    .grid--3-col {
-      grid-column: auto / span 3;
-      width: auto;
-    }
-
-    .grid--2-col {
-      grid-column: auto / span 2;
-      width: auto;
-    }
-
-    .grid--1-col {
-      grid-column: auto / span 1;
-      width: auto;
-    }
-  }
-}
-
-@media #{core.$screen-m-l} {
-  .grid--3-col,
-  .grid--4-col {
-    grid-column: auto / span 6;
-    width: auto;
+    @include grid-row--css-native(12, core.$space-md, 'xl', 24);
+    @include grid-row--css-native(8, core.$space-md, 'md', 24);
   }
 }
 
 @media #{core.$screen-xl-up} {
   @supports (display: grid) {
-    .grid {
-      grid-gap: core.$spacing-l;
-    }
+    @include grid-row--css-native(12, core.$space-lg, 'xl', 24);
   }
 }
 
@@ -166,7 +37,7 @@
  * Flexible Grid
  */
 
-.grid--flexible {
+.uq-grid--flexible {
   display: flex;
   flex: 1;
   flex-wrap: wrap;
@@ -174,10 +45,10 @@
   @supports (display: grid) {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
-    grid-gap: core.$spacing-m;
+    grid-gap: core.$space-md;
   }
 
-  & > .grid__col {
+  > .uq-grid__col {
     flex: 1;
     min-width: 18%;
     margin-right: 1%;
@@ -191,37 +62,41 @@
   }
 }
 
-.grid--halves {
-  & > .grid__col {
-    @media #{core.$screen-m-up} {
+/**
+ * What are these?
+ */
+
+.uq-grid--halves {
+  > .uq-grid__col {
+    @media #{core.$screen-md-up} {
       grid-column: auto / span 6;
       width: auto;
     }
   }
 }
 
-.grid--thirds {
-  & > .grid__col {
-    @media #{core.$screen-m-up} {
+.uq-grid--thirds {
+  > .uq-grid__col {
+    @media #{core.$screen-md-up} {
       grid-column: auto / span 6;
       width: auto;
     }
 
-    @media #{core.$screen-l-up} {
+    @media #{core.$screen-lg-up} {
       grid-column: auto / span 4;
       width: auto;
     }
   }
 }
 
-.grid--quarters {
-  & > .grid__col {
-    @media #{core.$screen-m-up} {
+.uq-grid--quarters {
+  > .uq-grid__col {
+    @media #{core.$screen-md-up} {
       grid-column: auto / span 6;
       width: auto;
     }
 
-    @media #{core.$screen-l-up} {
+    @media #{core.$screen-lg-up} {
       grid-column: auto / span 3;
       width: auto;
     }
@@ -233,15 +108,15 @@
  * A grid the scrolls horizontally on mobile. Useful for holding cards.
  */
 
-@media #{core.$screen-l-down} {
-  .grid--scroll-small {
+@media #{core.$screen-lg-down} {
+  .uq-grid--scroll-small {
     display: flex;
     flex-wrap: nowrap;
     overflow: auto;
 
-    & .grid__col {
+    .uq-grid__col {
       flex: 1 0 18.75rem;
-      margin-right: core.$spacing-m;
+      margin-right: core.$space-md;
     }
   }
 }
