--- a/packages/grid/src/scss/_component.scss
+++ b/packages/grid/src/scss/_component.scss
@@ -22,14 +22,16 @@
 
 @media #{core.$screen-md-up} {
   @supports (display: grid) {
-    @include grid-row--css-native(6, core.$space-md, null, 24);
-    @include grid-row--css-native(12, core.$space-md, 'xl', 24);
-    @include grid-row--css-native(8, core.$space-md, 'md', 24);
+    @include grid-row--css-native(6, core.$space-md, null, 16);
+    @include grid-row--css-native(12, core.$space-md, 'xl', 16);
+    @include grid-row--css-native(8, core.$space-md, 'md', 16);
   }
 }
 
 @media #{core.$screen-xl-up} {
   @supports (display: grid) {
+    @include grid-row--css-native(6, core.$space-lg, null, 24);
+    @include grid-row--css-native(8, core.$space-lg, 'md', 24);
     @include grid-row--css-native(12, core.$space-lg, 'xl', 24);
   }
 }
